parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CASO_FOR
    EM
    ENQUANTO
    FACA
    INTERVALO
    PARA
    abre_colchete
    caracter_invisivel
    dois_pontos
    fecha_colchete
    ignore
    negacao
    nova_linha
    numero_errado
    ponto
    texto_errado
    variavel_errada

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statements statement
Rule 2     statements -> statement
Rule 3     statement -> IFSULDEMINAS ponto_virgula INICIO ponto_virgula COMPILADORES ponto_virgula statements FIM ponto_virgula
Rule 4     statement -> IFSULDEMINAS ponto_virgula INICIO ponto_virgula COMPILADORES ponto_virgula FIM ponto_virgula
Rule 5     statement -> comentario_uma_linha
Rule 6     statement -> INTEIRO variavel OPatr_simples inteiro ponto_virgula
Rule 7     statement -> INTEIRO variavel OPatr_simples flutuante ponto_virgula
Rule 8     statement -> INTEIRO variavel ponto_virgula
Rule 9     statement -> FLUTUANTE variavel OPatr_simples flutuante ponto_virgula
Rule 10    statement -> FLUTUANTE variavel OPatr_simples inteiro ponto_virgula
Rule 11    statement -> FLUTUANTE variavel ponto_virgula
Rule 12    statement -> TEXTO variavel OPatr_simples texto ponto_virgula
Rule 13    statement -> TEXTO variavel ponto_virgula
Rule 14    statement -> variavel OPatr_simples inteiro ponto_virgula
Rule 15    statement -> variavel OPatr_simples flutuante ponto_virgula
Rule 16    statement -> variavel OPatr inteiro ponto_virgula
Rule 17    statement -> variavel OPatr flutuante ponto_virgula
Rule 18    statement -> variavel OPatr variavel ponto_virgula
Rule 19    statement -> variavel OPatr_simples texto ponto_virgula
Rule 20    statement -> variavel OPatr_simples LER abre_parentese texto fecha_parentese ponto_virgula
Rule 21    statement -> variavel OPatr_simples LER abre_parentese variavel fecha_parentese ponto_virgula
Rule 22    statement -> variavel OPatr_simples LER abre_parentese fecha_parentese ponto_virgula
Rule 23    statement -> inteiro
Rule 24    statement -> inteiro OPmath inteiro
Rule 25    statement -> variavel OPmath inteiro
Rule 26    statement -> inteiro OPmath variavel
Rule 27    statement -> flutuante
Rule 28    statement -> flutuante OPmath flutuante
Rule 29    statement -> variavel OPmath flutuante
Rule 30    statement -> flutuante OPmath variavel
Rule 31    statement -> inteiro OPmath flutuante
Rule 32    statement -> flutuante OPmath inteiro
Rule 33    statement -> IMPRIMIR abre_parentese variavel fecha_parentese ponto_virgula
Rule 34    statement -> IMPRIMIR abre_parentese texto fecha_parentese ponto_virgula
Rule 35    statement -> IMPRIMIR abre_parentese texto virgula variavel fecha_parentese ponto_virgula
Rule 36    comparacao -> variavel OPcomp variavel
Rule 37    comparacao -> variavel OPcomp inteiro
Rule 38    comparacao -> variavel OPcomp flutuante
Rule 39    comparacao -> variavel OPcomp texto
Rule 40    comparacao -> inteiro OPcomp variavel
Rule 41    comparacao -> flutuante OPcomp variavel
Rule 42    comparacao -> texto OPcomp variavel
Rule 43    comparacao -> texto OPcomp texto
Rule 44    comparacao -> inteiro OPcomp inteiro
Rule 45    comparacao -> flutuante OPcomp flutuante
Rule 46    comparacao_aninhada -> comparacao OPlog comparacao
Rule 47    statement -> FUNCAO abre_parentese fecha_parentese abre_chave statements fecha_chave
Rule 48    statement -> variavel abre_parentese fecha_parentese
Rule 49    statement -> SAIR ponto_virgula
Rule 50    statement -> RETORNA ponto_virgula
Rule 51    statement -> RETORNA inteiro ponto_virgula
Rule 52    statement -> RETORNA flutuante ponto_virgula
Rule 53    statement -> RETORNA texto ponto_virgula
Rule 54    statement -> SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave
Rule 55    statement -> SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave SENAO abre_chave statements fecha_chave
Rule 56    statement -> SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave SENAO_SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave
Rule 57    statement -> SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave SENAO_SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave SENAO abre_chave statements fecha_chave

Terminals, with rules where they appear

CASO_FOR             : 
COMPILADORES         : 3 4
EM                   : 
ENQUANTO             : 
FACA                 : 
FIM                  : 3 4
FLUTUANTE            : 9 10 11
FUNCAO               : 47
IFSULDEMINAS         : 3 4
IMPRIMIR             : 33 34 35
INICIO               : 3 4
INTEIRO              : 6 7 8
INTERVALO            : 
LER                  : 20 21 22
OPatr                : 16 17 18
OPatr_simples        : 6 7 9 10 12 14 15 19 20 21 22
OPcomp               : 36 37 38 39 40 41 42 43 44 45
OPlog                : 46
OPmath               : 24 25 26 28 29 30 31 32
PARA                 : 
RETORNA              : 50 51 52 53
SAIR                 : 49
SE                   : 54 55 56 57
SENAO                : 55 57
SENAO_SE             : 56 57
TEXTO                : 12 13
abre_chave           : 47 54 55 55 56 56 57 57 57
abre_colchete        : 
abre_parentese       : 20 21 22 33 34 35 47 48 54 55 56 56 57 57
caracter_invisivel   : 
comentario_uma_linha : 5
dois_pontos          : 
error                : 
fecha_chave          : 47 54 55 55 56 56 57 57 57
fecha_colchete       : 
fecha_parentese      : 20 21 22 33 34 35 47 48 54 55 56 56 57 57
flutuante            : 7 9 15 17 27 28 28 29 30 31 32 38 41 45 45 52
ignore               : 
inteiro              : 6 10 14 16 23 24 24 25 26 31 32 37 40 44 44 51
negacao              : 
nova_linha           : 
numero_errado        : 
ponto                : 
ponto_virgula        : 3 3 3 3 4 4 4 4 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 33 34 35 49 50 51 52 53
texto                : 12 19 20 34 35 39 42 43 43 53
texto_errado         : 
variavel             : 6 7 8 9 10 11 12 13 14 15 16 17 18 18 19 20 21 21 22 25 26 29 30 33 35 36 36 37 38 39 40 41 42 48
variavel_errada      : 
virgula              : 35

Nonterminals, with rules where they appear

comparacao           : 46 46 54 55 56 56 57 57
comparacao_aninhada  : 
statement            : 1 2
statements           : 1 3 47 54 55 55 56 56 57 57 57 0

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statements statement
    (2) statements -> . statement
    (3) statement -> . IFSULDEMINAS ponto_virgula INICIO ponto_virgula COMPILADORES ponto_virgula statements FIM ponto_virgula
    (4) statement -> . IFSULDEMINAS ponto_virgula INICIO ponto_virgula COMPILADORES ponto_virgula FIM ponto_virgula
    (5) statement -> . comentario_uma_linha
    (6) statement -> . INTEIRO variavel OPatr_simples inteiro ponto_virgula
    (7) statement -> . INTEIRO variavel OPatr_simples flutuante ponto_virgula
    (8) statement -> . INTEIRO variavel ponto_virgula
    (9) statement -> . FLUTUANTE variavel OPatr_simples flutuante ponto_virgula
    (10) statement -> . FLUTUANTE variavel OPatr_simples inteiro ponto_virgula
    (11) statement -> . FLUTUANTE variavel ponto_virgula
    (12) statement -> . TEXTO variavel OPatr_simples texto ponto_virgula
    (13) statement -> . TEXTO variavel ponto_virgula
    (14) statement -> . variavel OPatr_simples inteiro ponto_virgula
    (15) statement -> . variavel OPatr_simples flutuante ponto_virgula
    (16) statement -> . variavel OPatr inteiro ponto_virgula
    (17) statement -> . variavel OPatr flutuante ponto_virgula
    (18) statement -> . variavel OPatr variavel ponto_virgula
    (19) statement -> . variavel OPatr_simples texto ponto_virgula
    (20) statement -> . variavel OPatr_simples LER abre_parentese texto fecha_parentese ponto_virgula
    (21) statement -> . variavel OPatr_simples LER abre_parentese variavel fecha_parentese ponto_virgula
    (22) statement -> . variavel OPatr_simples LER abre_parentese fecha_parentese ponto_virgula
    (23) statement -> . inteiro
    (24) statement -> . inteiro OPmath inteiro
    (25) statement -> . variavel OPmath inteiro
    (26) statement -> . inteiro OPmath variavel
    (27) statement -> . flutuante
    (28) statement -> . flutuante OPmath flutuante
    (29) statement -> . variavel OPmath flutuante
    (30) statement -> . flutuante OPmath variavel
    (31) statement -> . inteiro OPmath flutuante
    (32) statement -> . flutuante OPmath inteiro
    (33) statement -> . IMPRIMIR abre_parentese variavel fecha_parentese ponto_virgula
    (34) statement -> . IMPRIMIR abre_parentese texto fecha_parentese ponto_virgula
    (35) statement -> . IMPRIMIR abre_parentese texto virgula variavel fecha_parentese ponto_virgula
    (47) statement -> . FUNCAO abre_parentese fecha_parentese abre_chave statements fecha_chave
    (48) statement -> . variavel abre_parentese fecha_parentese
    (49) statement -> . SAIR ponto_virgula
    (50) statement -> . RETORNA ponto_virgula
    (51) statement -> . RETORNA inteiro ponto_virgula
    (52) statement -> . RETORNA flutuante ponto_virgula
    (53) statement -> . RETORNA texto ponto_virgula
    (54) statement -> . SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave
    (55) statement -> . SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave SENAO abre_chave statements fecha_chave
    (56) statement -> . SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave SENAO_SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave
    (57) statement -> . SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave SENAO_SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave SENAO abre_chave statements fecha_chave

    IFSULDEMINAS    shift and go to state 3
    comentario_uma_linha shift and go to state 4
    INTEIRO         shift and go to state 5
    FLUTUANTE       shift and go to state 9
    TEXTO           shift and go to state 10
    variavel        shift and go to state 6
    inteiro         shift and go to state 7
    flutuante       shift and go to state 8
    IMPRIMIR        shift and go to state 11
    FUNCAO          shift and go to state 12
    SAIR            shift and go to state 13
    RETORNA         shift and go to state 14
    SE              shift and go to state 15

    statements                     shift and go to state 1
    statement                      shift and go to state 2

state 1

    (0) S' -> statements .
    (1) statements -> statements . statement
    (3) statement -> . IFSULDEMINAS ponto_virgula INICIO ponto_virgula COMPILADORES ponto_virgula statements FIM ponto_virgula
    (4) statement -> . IFSULDEMINAS ponto_virgula INICIO ponto_virgula COMPILADORES ponto_virgula FIM ponto_virgula
    (5) statement -> . comentario_uma_linha
    (6) statement -> . INTEIRO variavel OPatr_simples inteiro ponto_virgula
    (7) statement -> . INTEIRO variavel OPatr_simples flutuante ponto_virgula
    (8) statement -> . INTEIRO variavel ponto_virgula
    (9) statement -> . FLUTUANTE variavel OPatr_simples flutuante ponto_virgula
    (10) statement -> . FLUTUANTE variavel OPatr_simples inteiro ponto_virgula
    (11) statement -> . FLUTUANTE variavel ponto_virgula
    (12) statement -> . TEXTO variavel OPatr_simples texto ponto_virgula
    (13) statement -> . TEXTO variavel ponto_virgula
    (14) statement -> . variavel OPatr_simples inteiro ponto_virgula
    (15) statement -> . variavel OPatr_simples flutuante ponto_virgula
    (16) statement -> . variavel OPatr inteiro ponto_virgula
    (17) statement -> . variavel OPatr flutuante ponto_virgula
    (18) statement -> . variavel OPatr variavel ponto_virgula
    (19) statement -> . variavel OPatr_simples texto ponto_virgula
    (20) statement -> . variavel OPatr_simples LER abre_parentese texto fecha_parentese ponto_virgula
    (21) statement -> . variavel OPatr_simples LER abre_parentese variavel fecha_parentese ponto_virgula
    (22) statement -> . variavel OPatr_simples LER abre_parentese fecha_parentese ponto_virgula
    (23) statement -> . inteiro
    (24) statement -> . inteiro OPmath inteiro
    (25) statement -> . variavel OPmath inteiro
    (26) statement -> . inteiro OPmath variavel
    (27) statement -> . flutuante
    (28) statement -> . flutuante OPmath flutuante
    (29) statement -> . variavel OPmath flutuante
    (30) statement -> . flutuante OPmath variavel
    (31) statement -> . inteiro OPmath flutuante
    (32) statement -> . flutuante OPmath inteiro
    (33) statement -> . IMPRIMIR abre_parentese variavel fecha_parentese ponto_virgula
    (34) statement -> . IMPRIMIR abre_parentese texto fecha_parentese ponto_virgula
    (35) statement -> . IMPRIMIR abre_parentese texto virgula variavel fecha_parentese ponto_virgula
    (47) statement -> . FUNCAO abre_parentese fecha_parentese abre_chave statements fecha_chave
    (48) statement -> . variavel abre_parentese fecha_parentese
    (49) statement -> . SAIR ponto_virgula
    (50) statement -> . RETORNA ponto_virgula
    (51) statement -> . RETORNA inteiro ponto_virgula
    (52) statement -> . RETORNA flutuante ponto_virgula
    (53) statement -> . RETORNA texto ponto_virgula
    (54) statement -> . SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave
    (55) statement -> . SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave SENAO abre_chave statements fecha_chave
    (56) statement -> . SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave SENAO_SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave
    (57) statement -> . SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave SENAO_SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave SENAO abre_chave statements fecha_chave

    IFSULDEMINAS    shift and go to state 3
    comentario_uma_linha shift and go to state 4
    INTEIRO         shift and go to state 5
    FLUTUANTE       shift and go to state 9
    TEXTO           shift and go to state 10
    variavel        shift and go to state 6
    inteiro         shift and go to state 7
    flutuante       shift and go to state 8
    IMPRIMIR        shift and go to state 11
    FUNCAO          shift and go to state 12
    SAIR            shift and go to state 13
    RETORNA         shift and go to state 14
    SE              shift and go to state 15

    statement                      shift and go to state 16

state 2

    (2) statements -> statement .

    IFSULDEMINAS    reduce using rule 2 (statements -> statement .)
    comentario_uma_linha reduce using rule 2 (statements -> statement .)
    INTEIRO         reduce using rule 2 (statements -> statement .)
    FLUTUANTE       reduce using rule 2 (statements -> statement .)
    TEXTO           reduce using rule 2 (statements -> statement .)
    variavel        reduce using rule 2 (statements -> statement .)
    inteiro         reduce using rule 2 (statements -> statement .)
    flutuante       reduce using rule 2 (statements -> statement .)
    IMPRIMIR        reduce using rule 2 (statements -> statement .)
    FUNCAO          reduce using rule 2 (statements -> statement .)
    SAIR            reduce using rule 2 (statements -> statement .)
    RETORNA         reduce using rule 2 (statements -> statement .)
    SE              reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    fecha_chave     reduce using rule 2 (statements -> statement .)
    FIM             reduce using rule 2 (statements -> statement .)


state 3

    (3) statement -> IFSULDEMINAS . ponto_virgula INICIO ponto_virgula COMPILADORES ponto_virgula statements FIM ponto_virgula
    (4) statement -> IFSULDEMINAS . ponto_virgula INICIO ponto_virgula COMPILADORES ponto_virgula FIM ponto_virgula

    ponto_virgula   shift and go to state 17


state 4

    (5) statement -> comentario_uma_linha .

    IFSULDEMINAS    reduce using rule 5 (statement -> comentario_uma_linha .)
    comentario_uma_linha reduce using rule 5 (statement -> comentario_uma_linha .)
    INTEIRO         reduce using rule 5 (statement -> comentario_uma_linha .)
    FLUTUANTE       reduce using rule 5 (statement -> comentario_uma_linha .)
    TEXTO           reduce using rule 5 (statement -> comentario_uma_linha .)
    variavel        reduce using rule 5 (statement -> comentario_uma_linha .)
    inteiro         reduce using rule 5 (statement -> comentario_uma_linha .)
    flutuante       reduce using rule 5 (statement -> comentario_uma_linha .)
    IMPRIMIR        reduce using rule 5 (statement -> comentario_uma_linha .)
    FUNCAO          reduce using rule 5 (statement -> comentario_uma_linha .)
    SAIR            reduce using rule 5 (statement -> comentario_uma_linha .)
    RETORNA         reduce using rule 5 (statement -> comentario_uma_linha .)
    SE              reduce using rule 5 (statement -> comentario_uma_linha .)
    $end            reduce using rule 5 (statement -> comentario_uma_linha .)
    fecha_chave     reduce using rule 5 (statement -> comentario_uma_linha .)
    FIM             reduce using rule 5 (statement -> comentario_uma_linha .)


state 5

    (6) statement -> INTEIRO . variavel OPatr_simples inteiro ponto_virgula
    (7) statement -> INTEIRO . variavel OPatr_simples flutuante ponto_virgula
    (8) statement -> INTEIRO . variavel ponto_virgula

    variavel        shift and go to state 18


state 6

    (14) statement -> variavel . OPatr_simples inteiro ponto_virgula
    (15) statement -> variavel . OPatr_simples flutuante ponto_virgula
    (16) statement -> variavel . OPatr inteiro ponto_virgula
    (17) statement -> variavel . OPatr flutuante ponto_virgula
    (18) statement -> variavel . OPatr variavel ponto_virgula
    (19) statement -> variavel . OPatr_simples texto ponto_virgula
    (20) statement -> variavel . OPatr_simples LER abre_parentese texto fecha_parentese ponto_virgula
    (21) statement -> variavel . OPatr_simples LER abre_parentese variavel fecha_parentese ponto_virgula
    (22) statement -> variavel . OPatr_simples LER abre_parentese fecha_parentese ponto_virgula
    (25) statement -> variavel . OPmath inteiro
    (29) statement -> variavel . OPmath flutuante
    (48) statement -> variavel . abre_parentese fecha_parentese

    OPatr_simples   shift and go to state 19
    OPatr           shift and go to state 20
    OPmath          shift and go to state 22
    abre_parentese  shift and go to state 21


state 7

    (23) statement -> inteiro .
    (24) statement -> inteiro . OPmath inteiro
    (26) statement -> inteiro . OPmath variavel
    (31) statement -> inteiro . OPmath flutuante

    IFSULDEMINAS    reduce using rule 23 (statement -> inteiro .)
    comentario_uma_linha reduce using rule 23 (statement -> inteiro .)
    INTEIRO         reduce using rule 23 (statement -> inteiro .)
    FLUTUANTE       reduce using rule 23 (statement -> inteiro .)
    TEXTO           reduce using rule 23 (statement -> inteiro .)
    variavel        reduce using rule 23 (statement -> inteiro .)
    inteiro         reduce using rule 23 (statement -> inteiro .)
    flutuante       reduce using rule 23 (statement -> inteiro .)
    IMPRIMIR        reduce using rule 23 (statement -> inteiro .)
    FUNCAO          reduce using rule 23 (statement -> inteiro .)
    SAIR            reduce using rule 23 (statement -> inteiro .)
    RETORNA         reduce using rule 23 (statement -> inteiro .)
    SE              reduce using rule 23 (statement -> inteiro .)
    $end            reduce using rule 23 (statement -> inteiro .)
    fecha_chave     reduce using rule 23 (statement -> inteiro .)
    FIM             reduce using rule 23 (statement -> inteiro .)
    OPmath          shift and go to state 23


state 8

    (27) statement -> flutuante .
    (28) statement -> flutuante . OPmath flutuante
    (30) statement -> flutuante . OPmath variavel
    (32) statement -> flutuante . OPmath inteiro

    IFSULDEMINAS    reduce using rule 27 (statement -> flutuante .)
    comentario_uma_linha reduce using rule 27 (statement -> flutuante .)
    INTEIRO         reduce using rule 27 (statement -> flutuante .)
    FLUTUANTE       reduce using rule 27 (statement -> flutuante .)
    TEXTO           reduce using rule 27 (statement -> flutuante .)
    variavel        reduce using rule 27 (statement -> flutuante .)
    inteiro         reduce using rule 27 (statement -> flutuante .)
    flutuante       reduce using rule 27 (statement -> flutuante .)
    IMPRIMIR        reduce using rule 27 (statement -> flutuante .)
    FUNCAO          reduce using rule 27 (statement -> flutuante .)
    SAIR            reduce using rule 27 (statement -> flutuante .)
    RETORNA         reduce using rule 27 (statement -> flutuante .)
    SE              reduce using rule 27 (statement -> flutuante .)
    $end            reduce using rule 27 (statement -> flutuante .)
    fecha_chave     reduce using rule 27 (statement -> flutuante .)
    FIM             reduce using rule 27 (statement -> flutuante .)
    OPmath          shift and go to state 24


state 9

    (9) statement -> FLUTUANTE . variavel OPatr_simples flutuante ponto_virgula
    (10) statement -> FLUTUANTE . variavel OPatr_simples inteiro ponto_virgula
    (11) statement -> FLUTUANTE . variavel ponto_virgula

    variavel        shift and go to state 25


state 10

    (12) statement -> TEXTO . variavel OPatr_simples texto ponto_virgula
    (13) statement -> TEXTO . variavel ponto_virgula

    variavel        shift and go to state 26


state 11

    (33) statement -> IMPRIMIR . abre_parentese variavel fecha_parentese ponto_virgula
    (34) statement -> IMPRIMIR . abre_parentese texto fecha_parentese ponto_virgula
    (35) statement -> IMPRIMIR . abre_parentese texto virgula variavel fecha_parentese ponto_virgula

    abre_parentese  shift and go to state 27


state 12

    (47) statement -> FUNCAO . abre_parentese fecha_parentese abre_chave statements fecha_chave

    abre_parentese  shift and go to state 28


state 13

    (49) statement -> SAIR . ponto_virgula

    ponto_virgula   shift and go to state 29


state 14

    (50) statement -> RETORNA . ponto_virgula
    (51) statement -> RETORNA . inteiro ponto_virgula
    (52) statement -> RETORNA . flutuante ponto_virgula
    (53) statement -> RETORNA . texto ponto_virgula

    ponto_virgula   shift and go to state 30
    inteiro         shift and go to state 31
    flutuante       shift and go to state 32
    texto           shift and go to state 33


state 15

    (54) statement -> SE . abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave
    (55) statement -> SE . abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave SENAO abre_chave statements fecha_chave
    (56) statement -> SE . abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave SENAO_SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave
    (57) statement -> SE . abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave SENAO_SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave SENAO abre_chave statements fecha_chave

    abre_parentese  shift and go to state 34


state 16

    (1) statements -> statements statement .

    IFSULDEMINAS    reduce using rule 1 (statements -> statements statement .)
    comentario_uma_linha reduce using rule 1 (statements -> statements statement .)
    INTEIRO         reduce using rule 1 (statements -> statements statement .)
    FLUTUANTE       reduce using rule 1 (statements -> statements statement .)
    TEXTO           reduce using rule 1 (statements -> statements statement .)
    variavel        reduce using rule 1 (statements -> statements statement .)
    inteiro         reduce using rule 1 (statements -> statements statement .)
    flutuante       reduce using rule 1 (statements -> statements statement .)
    IMPRIMIR        reduce using rule 1 (statements -> statements statement .)
    FUNCAO          reduce using rule 1 (statements -> statements statement .)
    SAIR            reduce using rule 1 (statements -> statements statement .)
    RETORNA         reduce using rule 1 (statements -> statements statement .)
    SE              reduce using rule 1 (statements -> statements statement .)
    $end            reduce using rule 1 (statements -> statements statement .)
    fecha_chave     reduce using rule 1 (statements -> statements statement .)
    FIM             reduce using rule 1 (statements -> statements statement .)


state 17

    (3) statement -> IFSULDEMINAS ponto_virgula . INICIO ponto_virgula COMPILADORES ponto_virgula statements FIM ponto_virgula
    (4) statement -> IFSULDEMINAS ponto_virgula . INICIO ponto_virgula COMPILADORES ponto_virgula FIM ponto_virgula

    INICIO          shift and go to state 35


state 18

    (6) statement -> INTEIRO variavel . OPatr_simples inteiro ponto_virgula
    (7) statement -> INTEIRO variavel . OPatr_simples flutuante ponto_virgula
    (8) statement -> INTEIRO variavel . ponto_virgula

    OPatr_simples   shift and go to state 36
    ponto_virgula   shift and go to state 37


state 19

    (14) statement -> variavel OPatr_simples . inteiro ponto_virgula
    (15) statement -> variavel OPatr_simples . flutuante ponto_virgula
    (19) statement -> variavel OPatr_simples . texto ponto_virgula
    (20) statement -> variavel OPatr_simples . LER abre_parentese texto fecha_parentese ponto_virgula
    (21) statement -> variavel OPatr_simples . LER abre_parentese variavel fecha_parentese ponto_virgula
    (22) statement -> variavel OPatr_simples . LER abre_parentese fecha_parentese ponto_virgula

    inteiro         shift and go to state 38
    flutuante       shift and go to state 39
    texto           shift and go to state 40
    LER             shift and go to state 41


state 20

    (16) statement -> variavel OPatr . inteiro ponto_virgula
    (17) statement -> variavel OPatr . flutuante ponto_virgula
    (18) statement -> variavel OPatr . variavel ponto_virgula

    inteiro         shift and go to state 43
    flutuante       shift and go to state 44
    variavel        shift and go to state 42


state 21

    (48) statement -> variavel abre_parentese . fecha_parentese

    fecha_parentese shift and go to state 45


state 22

    (25) statement -> variavel OPmath . inteiro
    (29) statement -> variavel OPmath . flutuante

    inteiro         shift and go to state 46
    flutuante       shift and go to state 47


state 23

    (24) statement -> inteiro OPmath . inteiro
    (26) statement -> inteiro OPmath . variavel
    (31) statement -> inteiro OPmath . flutuante

    inteiro         shift and go to state 48
    variavel        shift and go to state 49
    flutuante       shift and go to state 50


state 24

    (28) statement -> flutuante OPmath . flutuante
    (30) statement -> flutuante OPmath . variavel
    (32) statement -> flutuante OPmath . inteiro

    flutuante       shift and go to state 51
    variavel        shift and go to state 52
    inteiro         shift and go to state 53


state 25

    (9) statement -> FLUTUANTE variavel . OPatr_simples flutuante ponto_virgula
    (10) statement -> FLUTUANTE variavel . OPatr_simples inteiro ponto_virgula
    (11) statement -> FLUTUANTE variavel . ponto_virgula

    OPatr_simples   shift and go to state 54
    ponto_virgula   shift and go to state 55


state 26

    (12) statement -> TEXTO variavel . OPatr_simples texto ponto_virgula
    (13) statement -> TEXTO variavel . ponto_virgula

    OPatr_simples   shift and go to state 56
    ponto_virgula   shift and go to state 57


state 27

    (33) statement -> IMPRIMIR abre_parentese . variavel fecha_parentese ponto_virgula
    (34) statement -> IMPRIMIR abre_parentese . texto fecha_parentese ponto_virgula
    (35) statement -> IMPRIMIR abre_parentese . texto virgula variavel fecha_parentese ponto_virgula

    variavel        shift and go to state 58
    texto           shift and go to state 59


state 28

    (47) statement -> FUNCAO abre_parentese . fecha_parentese abre_chave statements fecha_chave

    fecha_parentese shift and go to state 60


state 29

    (49) statement -> SAIR ponto_virgula .

    IFSULDEMINAS    reduce using rule 49 (statement -> SAIR ponto_virgula .)
    comentario_uma_linha reduce using rule 49 (statement -> SAIR ponto_virgula .)
    INTEIRO         reduce using rule 49 (statement -> SAIR ponto_virgula .)
    FLUTUANTE       reduce using rule 49 (statement -> SAIR ponto_virgula .)
    TEXTO           reduce using rule 49 (statement -> SAIR ponto_virgula .)
    variavel        reduce using rule 49 (statement -> SAIR ponto_virgula .)
    inteiro         reduce using rule 49 (statement -> SAIR ponto_virgula .)
    flutuante       reduce using rule 49 (statement -> SAIR ponto_virgula .)
    IMPRIMIR        reduce using rule 49 (statement -> SAIR ponto_virgula .)
    FUNCAO          reduce using rule 49 (statement -> SAIR ponto_virgula .)
    SAIR            reduce using rule 49 (statement -> SAIR ponto_virgula .)
    RETORNA         reduce using rule 49 (statement -> SAIR ponto_virgula .)
    SE              reduce using rule 49 (statement -> SAIR ponto_virgula .)
    $end            reduce using rule 49 (statement -> SAIR ponto_virgula .)
    fecha_chave     reduce using rule 49 (statement -> SAIR ponto_virgula .)
    FIM             reduce using rule 49 (statement -> SAIR ponto_virgula .)


state 30

    (50) statement -> RETORNA ponto_virgula .

    IFSULDEMINAS    reduce using rule 50 (statement -> RETORNA ponto_virgula .)
    comentario_uma_linha reduce using rule 50 (statement -> RETORNA ponto_virgula .)
    INTEIRO         reduce using rule 50 (statement -> RETORNA ponto_virgula .)
    FLUTUANTE       reduce using rule 50 (statement -> RETORNA ponto_virgula .)
    TEXTO           reduce using rule 50 (statement -> RETORNA ponto_virgula .)
    variavel        reduce using rule 50 (statement -> RETORNA ponto_virgula .)
    inteiro         reduce using rule 50 (statement -> RETORNA ponto_virgula .)
    flutuante       reduce using rule 50 (statement -> RETORNA ponto_virgula .)
    IMPRIMIR        reduce using rule 50 (statement -> RETORNA ponto_virgula .)
    FUNCAO          reduce using rule 50 (statement -> RETORNA ponto_virgula .)
    SAIR            reduce using rule 50 (statement -> RETORNA ponto_virgula .)
    RETORNA         reduce using rule 50 (statement -> RETORNA ponto_virgula .)
    SE              reduce using rule 50 (statement -> RETORNA ponto_virgula .)
    $end            reduce using rule 50 (statement -> RETORNA ponto_virgula .)
    fecha_chave     reduce using rule 50 (statement -> RETORNA ponto_virgula .)
    FIM             reduce using rule 50 (statement -> RETORNA ponto_virgula .)


state 31

    (51) statement -> RETORNA inteiro . ponto_virgula

    ponto_virgula   shift and go to state 61


state 32

    (52) statement -> RETORNA flutuante . ponto_virgula

    ponto_virgula   shift and go to state 62


state 33

    (53) statement -> RETORNA texto . ponto_virgula

    ponto_virgula   shift and go to state 63


state 34

    (54) statement -> SE abre_parentese . comparacao fecha_parentese abre_chave statements fecha_chave
    (55) statement -> SE abre_parentese . comparacao fecha_parentese abre_chave statements fecha_chave SENAO abre_chave statements fecha_chave
    (56) statement -> SE abre_parentese . comparacao fecha_parentese abre_chave statements fecha_chave SENAO_SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave
    (57) statement -> SE abre_parentese . comparacao fecha_parentese abre_chave statements fecha_chave SENAO_SE abre_parentese comparacao fecha_parentese abre_chave statements fecha_chave SENAO abre_chave statements fecha_chave
    (36) comparacao -> . variavel OPcomp variavel
    (37) comparacao -> . variavel OPcomp inteiro
    (38) comparacao -> . variavel OPcomp flutuante
    (39) comparacao -> . variavel OPcomp texto
    (40) comparacao -> . inteiro OPcomp variavel
    (41) comparacao -> . flutuante OPcomp variavel
    (42) comparacao -> . texto OPcomp variavel
    (43) comparacao -> . texto OPcomp texto
    (44) comparacao -> . inteiro OPcomp inteiro
    (45) comparacao -> . flutuante OPcomp flutuante

    variavel        shift and go to state 65
    inteiro         shift and go to state 66
    flutuante       shift and go to state 67
    texto           shift and go to state 68

    comparacao                     shift and go to state 64

state 35

    (3) statement -> IFSULDEMINAS ponto_virgula INICIO . ponto_virgula COMPILADORES ponto_virgula statements FIM ponto_virgula
    (4) statement -> IFSULDEMINAS ponto_virgula INICIO . ponto_virgula COMPILADORES ponto_virgula FIM ponto_virgula

    ponto_virgula   shift and go to state 69


state 36

    (6) statement -> INTEIRO variavel OPatr_simples . inteiro ponto_virgula
    (7) statement -> INTEIRO variavel OPatr_simples . flutuante ponto_virgula

    inteiro         shift and go to state 70
    flutuante       shift and go to state 71


state 37

    (8) statement -> INTEIRO variavel ponto_virgula .
